<resources>
    <string name="app_name">Messenger App</string>
    <string name="profile_picture_desc">Profile Picture</string>
    <string name="enter_your_nickname">Enter your nickname</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="sign_in_button_text">Sign in</string>
    <string name="not_registered_text">Not registered?</string>
    <string name="sign_up_button_text">Sign up</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sign_up_nickname_text">Enter your nickname</string>
    <string name="sign_up_password_text">Enter your password</string>
    <string name="sign_up_text">What I do</string>
    <string name="update_button_text">UPDATE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_out_button_text">SIGN OUT</string>
    <string name="messages_profile_image_desc">Profile image</string>
    <string name="default_name">Name</string>
    <string name="default_time_str">Time</string>
    <string name="search_hint">Search</string>
    <string name="search_desc">Search</string>
    <string name="plus_button_desc">Plus button</string>
    <string name="no_messages">no messages</string>
    <string name="message_box_hint_text">Message</string>
    <string name="message_text_hint">message</string>
    <string name="no_chats">no chats</string>
</resources>