<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ge.akakhishvili.messengerapp.MainActivity">

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="@dimen/profile_picture_width"
        android:layout_height="@dimen/profile_picture_height"
        android:layout_marginTop="@dimen/margin_top"
        android:contentDescription="@string/profile_picture_desc"
        android:src="@drawable/avatar_image_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nickname_edit_text"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_between_image_text"
        android:autofillHints="True"
        android:background="@drawable/login_page_edit_text_background"
        android:hint="@string/enter_your_nickname"
        android:inputType="text"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image" />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="wrap_content"
        android:background="@drawable/login_page_edit_text_background"
        android:autofillHints="True"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/space_between_edit_texts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nickname_edit_text" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_button_text"
        android:background="@drawable/login_button_background"
        android:layout_marginTop="@dimen/sign_in_margin_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_edit_text" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_registered_text"
        android:layout_marginBottom="@dimen/not_registered_margin_bottom"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_button_text"
        android:background="@drawable/white_button_background"
        android:textColor="@color/black"
        android:layout_marginBottom="@dimen/sign_up_margin_bottom"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>