<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/chat_item_height"
    android:paddingStart="@dimen/message_padding_left"
    android:paddingEnd="@dimen/message_padding_right"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/chat_message_image"
        android:layout_width="@dimen/messages_profile_image_width"
        android:layout_height="@dimen/messages_profile_image_height"
        android:src="@drawable/avatar_image_placeholder"
        android:contentDescription="@string/messages_profile_image_desc" />

    <LinearLayout
        android:layout_marginStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_weight="8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/message_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="8pt"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_gravity="end"
                android:text="@string/default_name" />

            <TextView
                android:id="@+id/message_text"
                android:layout_marginTop="@dimen/vertical_space_between_name_and_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/message_text_hint" />

        </LinearLayout>

        <TextView
            android:id="@+id/message_sent_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:layout_weight="3"
            android:text="@string/default_time_str"
            android:textAlignment="textEnd" />
    </LinearLayout>


</LinearLayout>